# zbory

./: .gitignore  README.md
C_and_Board_libs/Lighter/inc/: gpio_pin.h
C_and_Board_libs/Lighter/src/: gpio_pin.c  main.c  timer.c
C_and_Board_libs/TrialExamOrientationBoard/inc/: timer.h
C_and_Board_libs/TrialExamOrientationBoard/src/: gpio_pin.c  main.c  systemclock_init.c  timer.c
C_and_Board_libs/TrialExamOrientationTask1/: main.c
C_and_Board_libs/board_init/inc/: gpio_pin.h  systemclock_init.h  uart.h
C_and_Board_libs/board_init/src/: gpio_pin.c  uart.c
C_and_Board_libs/data_structures/: linkedlist.c  linkedlist.h  matrix.c  matrix.h  myvector.h
opencvPractice/Blurring/: blurring.cpp
opencvPractice/ColorSpaceReduction/: ColorSpaceReduction.cpp
opencvPractice/DetectColorInVideo/: OpenCVTutorials.cpp  VideoColorDetecter.cpp
opencvPractice/Sharpening/: Sharpening.cpp
opencvPractice/opencvTest/: opencvTest.sln
opencvPractice/opencvTest/googleTest/: googleTest.vcxproj  test.cpp
opencvPractice/opencvTest/opencvTest/: main.cpp  opencvTest.vcxproj  opencvTest.vcxproj.filters  opencvTestHelper.cpp  opencvTestHelper.h
week-01/day-2/directory01/: text.txt
week-01/day-2/directory02/: text.txt
week-01/day-2/directory03/: text.txt
week-02/day-4/Hexagons/test/: CMakeLists.txt  main.cpp
week-04/day-3/InstrumentsToStringedInstruments/: BassGuitar.cpp  BassGuitar.h  CMakeLists.txt  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.cpp  Instrument.h  StringedInstrument.cpp  StringedInstrument.h  Violin.cpp  Violin.h  main.cpp
week-06/day-2/Pi/: main.c  (+3 more)
(+444 files in other folders)
